Revised store-manage.html style.
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5052 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheets/portal.css
+++ b/stylesheets/portal.css
@@ -1536,7 +1536,7 @@
     overflow: hidden;
     width: 100%;
     position: absolute;
-    top: 178px;
+    top: 158px;
     bottom: 0;
 }
 /*#store-layer.collapse #store-constrain {
@@ -1814,5 +1814,6 @@
     margin: 0 auto;
     right: 35px;
     width: 200px;
+    padding-bottom: 10px;
 }
 }
