--- a/stylesheets/perfect-scrollbar.css
+++ b/stylesheets/perfect-scrollbar.css
@@ -55,7 +55,7 @@
     opacity: 0.9;
     filter: alpha(opacity = 90);
     /*cursor: default;*/
-    cursor: hand;
+    cursor: pointer;
 }
 
 .ps-container .ps-scrollbar-y.in-scrolling {
