--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -3,5 +3,8 @@
   In this file you should write your main styles. (or centralize your imports)
   Import this file using the following HTML or equivalent:
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-
+*/
 @import compass/reset
+
+@import lib/var
+@import lib/content
