update from DS (1313,1314)
在iOS/Android preview的畫面，要能顯示34bytes長度的字數，超過就以"..."表示
1. 34bytes長度的字數，表示中文算17，英文算34。
2. 調整 func.common.js 加入 mb_strwidth 及 mb_strimwidth 等截字處理共用函式。
3. 調整 domready.channel-poi.js 及 domready.curation.js 套用上述截字處理功能。
4. 由於截字可能斷在中間的關係，調整 lightbox.css 樣式，使文案靠左對齊。

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5079 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheets/lightbox.css
+++ b/stylesheets/lightbox.css
@@ -1286,7 +1286,7 @@ body.from-poi-edit-mode #poi-event-overlay .wrap .content .func ul li.notice {
     padding: 0 10px;
     color: #fff;
     font-size: 12px;
-    text-align: center;
+    text-align: left;
     line-height: 16px;
 }
 
