Decoupled epcurate-curation.html css and javascript. Revised epcurate-curation.html style. Added margin top option for perfect-scrollbar plugin. Added respond.min.js plugin. Revised perfect scrollbar positioning in channel-add, portal-manage and store-manage.
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5135 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheets/uniform.css
+++ b/stylesheets/uniform.css
@@ -28,6 +28,7 @@ div.radio span input {
     filter: alpha(opacity=0);
     -moz-opacity: 0;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    cursor: pointer;
 }
 
 div.radio.focus span, 
