--- a/stylesheetsv3/style.css
+++ b/stylesheetsv3/style.css
@@ -905,7 +905,7 @@ abbr, acronym {
     top: 70px;
     bottom: 0;
     overflow: hidden;
-    padding-bottom: 48px;
+    /*padding-bottom: 48px;*/
 }
 
 #content-main-wrap.footer-on {
@@ -914,6 +914,7 @@ abbr, acronym {
 
 div.constrain {
     margin-right: 35px;
+    padding-bottom: 48px;
 }
 
 /* title-func */
