版本: 5145 作者: yifan 日期: 2013/7/24 17:16 訊息: Revised scrollbar positioning in episode-list.html. Decoupled css & js in episode-list.html. ---- #	modified:   javascripts/v3/domready.episode.js #	modified:   javascripts/v3/func.episode.js #	modified:   stylesheetsv3/episode.css #	modified:   stylesheetsv3/perfect-scrollbar.css
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5147 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheetsv3/perfect-scrollbar.css
+++ b/stylesheetsv3/perfect-scrollbar.css
@@ -69,6 +69,6 @@
     opacity: 0.9;
 }
 
-.episode-list.ps-container .ps-scrollbar-y {
+/*.episode-list.ps-container .ps-scrollbar-y {
    margin: 50px 0 200px 0;	
-}
+}*/
