版本: 5150 作者: yifan 日期: 2013/7/26 11:18 訊息: Updated UI changes from UI repo. ---- #  modified:   brand-setting.html #  modified:   channel-add.html #  modified:   channel-setting.html #  modified:   epcurate-curation.html #  modified:   episode-list.html #  new file:   images/ep_invalid.png #  modified:   index.html #  modified:   javascripts/v3/domready.channel.js #  modified:   javascripts/v3/domready.common.js #  modified:   javascripts/v3/domready.episode.js #  modified:   javascripts/v3/domready.get-url.js #  new file:   javascripts/v3/domready.portal.brand.js #  new file:   javascripts/v3/domready.signin.js #  modified:   javascripts/v3/func.channel.js #  modified:   javascripts/v3/func.common.js #  modified:   javascripts/v3/func.episode.js #  modified:   javascripts/v3/func.index.js #  new file:   javascripts/v3/func.portal.brand.js #  new file:   javascripts/v3/func.signin.js #  modified:   signin.html #  modified:   stylesheetsv3/channel.css #  modified:   stylesheetsv3/ep-curation.css #  modified:   stylesheetsv3/episode.css #  modified:   stylesheetsv3/portal.css #  new file:   stylesheetsv3/signin.css #  modified:   stylesheetsv3/style.css
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5164 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheetsv3/channel.css
+++ b/stylesheetsv3/channel.css
@@ -1165,7 +1165,8 @@ body.mac #title-func h2 {
 /* Channel settingForm tag list */
 #content-main-wrap form .fminput .fmfield .tag-list {
     overflow: hidden;
-    padding: 5px 0 0 150px;
+    padding: 5px 0 0 0;
+    width: 84%;
 }
 
 #content-main-wrap form .fminput .fmfield .tag-list h4,
@@ -1175,7 +1176,7 @@ body.mac #title-func h2 {
 }
 
 #content-main-wrap form .fminput .fmfield .tag-list ul {
-    width: 450px;
+    width: 74%;
     margin-top: -1px;
 }
 
@@ -1255,7 +1256,7 @@ body.mac #title-func h2 {
 #content-main-wrap form .form-btn {
     overflow: hidden;
     position: absolute;
-    bottom: 0;
+    bottom: 15px;
     right: 0;
 }
 
@@ -1305,13 +1306,13 @@ body.mac #title-func h2 {
 }
 
 #content-main-wrap.fixed form .form-btn {
-    bottom: 1px;
+    bottom: 15px;
     right: 35px;
     position: fixed;
 }
 
 #content-main-wrap.fixed.footer-on form .form-btn {
-    bottom: 48px;
+    bottom: 63px;
 }
 
 /* Get URL */
