--- a/stylesheetsv3/episode.css
+++ b/stylesheetsv3/episode.css
@@ -72,6 +72,7 @@ body.mac #title-func ul li p span a {
     width: 781px;
     margin: 4px auto 0;
     text-align: center;
+    top: -50px;
 }
 
 #ep-time-list h3,
