版本: 5183 作者: mars 日期: 2013/7/30 14:28 訊息: 1. fix bug ep-list time duration display 2. fix ep-list Get Url when click with hover style ---- 異動 : /episode-list.html 異動 : /stylesheetsv3/episode.css 異動 : /javascripts/v3/domready.get-url.js
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5183 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheetsv3/episode.css
+++ b/stylesheetsv3/episode.css
@@ -439,8 +439,8 @@ body.mac #title-func ul li p span a {
 #ep-list ul li .episode p.no-img span.duration {
     display: block;
     position: absolute;
-    bottom: 7px;
-    right: 7px;
+    bottom: 0px;
+    right: 0px;
     float: right;
     height: 14px;
     padding: 0 0 0 2px;
@@ -540,6 +540,7 @@ body.mac #title-func ul li p span a {
     text-decoration: none;
 }
 
+#ep-list ul li .episode .btns .btn-wrap ul li a.url.selected,
 #ep-list ul li .episode .btns .btn-wrap ul li a.disable,
 #ep-list ul li .episode .btns .btn-wrap ul li a:hover {
     color: #999;
@@ -591,6 +592,7 @@ body.mac #title-func ul li p span a {
    background-position: -46px -122px;
 }
 
+#ep-list ul li .episode .btns .btn-wrap ul li a.url.selected span,
 #ep-list ul li .episode .btns .btn-wrap ul li a.url:hover span {
     background-position: -23px -122px;
 }
