--- a/stylesheetsv3/style.css
+++ b/stylesheetsv3/style.css
@@ -870,12 +870,13 @@ abbr, acronym {
 #content-wrap {
     position: absolute;
     top: 103px;
+    bottom: 0;
     left: 0;
     z-index: 49;
     overflow: hidden;
     width: 100%;
     min-width: 1001px;
-    height: 100%;
+    /*height: 100%;*/
     background: url(../images/bg_main.png) repeat;
 }
 
@@ -895,7 +896,7 @@ abbr, acronym {
     left: 200px;
     right: 0px;
     top: 0;
-    bottom: 105px;
+    bottom: 0;
 }
 
 /* content-main */
