版本: 5198 作者: mars 日期: 2013/7/10 10:26 訊息: 1. ep-curation Storyboard mouse over all area with cursor: move ---- 異動 : \stylesheetsv3\ep-curation.css
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5198 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheetsv3/ep-curation.css
+++ b/stylesheetsv3/ep-curation.css
@@ -2613,6 +2613,7 @@ p.auto-height {
     color: #999;
     font: bold 17px Microsoft JhengHei;
     text-align: center;
+    cursor: move;
 }
 
 #storyboard .storyboard-list ul li p.img {
@@ -2677,6 +2678,7 @@ p.auto-height {
     font-weight: normal;
     font-size: 13px;
     line-height: 18px;
+    cursor: move;
 }
 
 #storyboard .storyboard-list ul li.invalid h4 {
