版本: 5259 作者: mars 日期: 2013/8/7 17:30 訊息: 1. channel logo未顯示為方型 2. epcurate-publish.html https://docs.google.com/spreadsheet/ccc?key=0AjDDP--2Cg6AdHJKYkRkUW56cVBYS25kZ1l4Q0RFdWc#gid=2 row 21 / 22 / 23 function complate, need css fix ---- 異動 : /stylesheets/channel.css 異動 : /epcurate-publish.html 異動 : /lang/en.json 異動 : /lang/zh.json 異動 : /javascripts/v3/domready.epcurate.js 異動 : /javascripts/v3/func.epcurate.js 新增 : /stylesheetsv3/epcurate-publish.css
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5259 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheets/channel.css
+++ b/stylesheets/channel.css
@@ -59,28 +59,6 @@ body.mac #title-func h2 {
     margin-top: -2px;
 }
 
-#empty-item {
-    border-style: dashed;
-    border-color: white;
-    cursor: pointer;
-}
-
-#empty-item:hover{
-    box-shadow: 0px 0px 15px 3px rgb(255, 255, 255), 0px 0px 15px 1px rgb(255, 255, 255) inset;
-    background: #fff;
-}
-
-#empty-item h2 {
-    color: #B4B4B4;
-    font-size: 30px;
-    font-weight: bold;
-    margin: 0 auto 20px;
-    text-align: center;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4), 0 1px 0 rgba(255, 255, 255, 0.4);
-    width: 100%;
-    margin-top:16px
-}
-
 #channel-list.ui-sortable li.clearfix:hover {
     background: url(../images/bg_main2.png) repeat 2px 0;
     cursor: move;
@@ -203,6 +181,7 @@ body.mac #title-func h2 {
     left: 5px;
     width: 32px;
     height: 32px;
+	overflow: hidden;
 }
 
 #channel-list li .photo-list .ch .img {
