--- a/stylesheetsv3/style.css
+++ b/stylesheetsv3/style.css
@@ -1650,12 +1650,22 @@ div.constrain {
     color: #999;
     background: url(../images/btn_gray.png) repeat-x 0 -160px;
 }
+.btn-gray.disabled .left {
+    background: url(../images/btn_gray.png) no-repeat 0 -192px;
+}
+.btn-gray.disabled .right {
+    background: url(../images/btn_gray.png) no-repeat 0 -224px;
+}
+.btn-gray.disabled .center {
+    color: #999;
+    background: url(../images/btn_gray.png) repeat-x 0 -256px;
+}
 .center a, .center a {
     text-decoration: none;
     padding: 2px 24px 2px 24px;
     color: #555;
 }
-.center a:hover, .center a:hover, .center:hover a, .center:hover a {
+.center a:hover, .center a:hover, .center:hover a, .center:hover a, .btn-gray.disabled .center a {
     text-decoration: none;
     color: #999;
 }
