版本: 5284 作者: mars 日期: 2013/8/8 15:10 訊息: 1. epcurate-publish css fix ---- 異動 : /stylesheetsv3/cms-settings.css 異動 : /stylesheetsv3/epcurate-publish.css 異動 : /stylesheetsv3/jquery.datepick.css
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5284 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheetsv3/jquery.datepick.css
+++ b/stylesheetsv3/jquery.datepick.css
@@ -177,7 +177,8 @@ table.ui-datepicker-calendar td a.ui-state-active,
 table.ui-datepicker-calendar td a:hover,
 .datepick .datepick-month table td a.datepick-selected,
 .datepick .datepick-month table td a:hover {
-    background-position: 0 -21px;
+    background-position: 0 0;
+	color: #fff;
 }
 
 table.ui-datepicker-calendar td.ui-state-disabled span,
