--- a/stylesheetsv3/ep-curation.css
+++ b/stylesheetsv3/ep-curation.css
@@ -29,18 +29,17 @@ p.auto-height {
 #epcurate-curation #cur-edit .font-container .text-func .func-wrap ul li a,
 #epcurate-curation #cur-edit .font-container .text-func .func-wrap ul li .radio span,
 #epcurate-curation #cur-edit .font-container .text-func .func-wrap ul li .checker span,
-#epcurate-curation #cur-edit .background-container .bg-color a,
 #epcurate-curation #cur-edit .btn-container .btn-del a,
 #epcurate-curation #cur-edit .select .select-btn,
 #epcurate-curation #cur-edit .edit-title.disable .select .select-btn,
 #epcurate-curation #cur-edit .select.disable .select-btn,
 #epcurate-curation #cur-edit .select.disable .select-btn:hover,
 #epcurate-curation #cur-poi .poi-list ul li .edit,
-#epcurate-curation #cur-poi .poi-list ul li .btn-del,
 #epcurate-curation #cur-poi-edit .content .btn-container .btn-del a,
 #epcurate-curation .tab-content .result-list ul li .hover-func a.video-edit,
 #epcurate-curation .tab-content .result-list ul li .hover-func a.video-edit:hover {
-    background: url(../images/btns.png) no-repeat 0 0;
+    background-image: url(../images/btns.png);
+	background-repeat: no-repeat;
 }
 
 #epcurate-curation #cur-edit .font-container .text-func .func-wrap ul li .tip .tip-left,
@@ -75,7 +74,7 @@ p.auto-height {
     background: url(../images/bg_tab_bar2.png) repeat-x 0 -4px;
     position: absolute;
     top: 0;
-    bottom: 255px;
+    bottom: 235px;
     width: 100%;
 }
 
@@ -493,11 +492,11 @@ p.auto-height {
     padding: 0 5px;
     border: none;
     background: url(../images/input_box_middle_vertical.png) repeat-y;
-    color: #555;
     font-family: Arial, Helvetica;
     font-size: 13px;
     resize: none;
     height: 100%;
+	color: #555;
 }
 
 #epcurate-curation #cur-add p.notice {
@@ -513,7 +512,7 @@ p.auto-height {
     position: absolute;
     /* float: right; */
     right: 0;
-    bottom: 0;
+    bottom: -9px;
 }
 
 #epcurate-curation #cur-add .func .checkbox {
@@ -776,7 +775,7 @@ p.auto-height {
 }
 
 #epcurate-curation #cur-edit .text-container {
-    margin-bottom: 24px;
+    margin-bottom: 28px;
 }
 
 #epcurate-curation #cur-edit .text-container p.textarea {
@@ -827,7 +826,7 @@ p.auto-height {
 }
 
 #epcurate-curation #cur-edit .font-container {
-    margin-bottom: 24px;
+    margin-bottom: 28px;
 }
 
 #epcurate-curation #cur-edit .font-container p {
@@ -904,9 +903,24 @@ p.auto-height {
 
 #epcurate-curation #cur-edit .font-container .text-func .func-wrap ul li a.font-color {
     position: relative;
-    width: 33px;
-    background-position: 0 -1363px;
+    width: 33px;	
     text-decoration: none;
+	background: none;
+}
+
+#epcurate-curation #cur-edit .font-container .text-func .func-wrap ul li a.font-color .bg {
+    position: absolute;
+	left: 0;
+	top: 0;
+    width: 33px;
+	height: 26px;
+    background: url(../images/btns.png) no-repeat 0 -1363px;	
+    text-decoration: none;
+	z-index: 61;
+}
+
+#epcurate-curation #cur-edit .font-container .text-func .func-wrap ul li a.font-color:hover .bg {
+    background-position: -40px -1413px;	
 }
 
 #epcurate-curation #cur-edit .font-container .text-func .func-wrap ul li a.font-color span.color {
@@ -917,6 +931,7 @@ p.auto-height {
     width: 12px;
     height: 3px;
     background-color: #fff;
+	z-index: 62;
 }
 
 #epcurate-curation #cur-edit .edit-title.disable .font-container .text-func .func-wrap ul li a.font-color span.color {
@@ -924,8 +939,7 @@ p.auto-height {
 }
 
 #epcurate-curation #cur-edit .edit-title.disable .font-container .text-func .func-wrap ul li a.font-color,
-#epcurate-curation #cur-edit .font-container .text-func .func-wrap ul li a.font-color.disable,
-#epcurate-curation #cur-edit .font-container .text-func .func-wrap ul li a.font-color:hover {
+#epcurate-curation #cur-edit .font-container .text-func .func-wrap ul li a.font-color.disable {
     background-position: 0 -1413px;
 }
 
@@ -1178,8 +1192,22 @@ p.auto-height {
     position: relative;
     width: 36px;
     height: 25px;
-    background-position: 0 -1973px;
     text-indent: -100000px;
+}
+
+#epcurate-curation #cur-edit .background-container .bg-color a .bg {
+    display: block;
+    position: absolute;
+	top: 0;
+	left: 0;
+    width: 36px;
+    height: 25px;
+    background: url(../images/btns.png) no-repeat 0 -1973px;
+	z-index: 61;
+}
+
+#epcurate-curation #cur-edit .background-container .bg-color a:hover .bg {
+    background: url(../images/btns.png) no-repeat -40px -1413px;
 }
 
 #epcurate-curation #cur-edit .background-container .bg-color a span {
@@ -1190,14 +1218,14 @@ p.auto-height {
     width: 14px;
     height: 14px;
     background-color: #000;
+	z-index: 62;
 }
 
 #epcurate-curation #cur-edit .edit-title.disable .background-container .bg-color a span {
     background-color: #000 !important;
 }
 
-#epcurate-curation #cur-edit .edit-title.disable .background-container .bg-color a,
-#epcurate-curation #cur-edit .background-container .bg-color a:hover {
+#epcurate-curation #cur-edit .edit-title.disable .background-container .bg-color a {
     background-position: 0 -2024px;
 }
 
@@ -1320,25 +1348,24 @@ p.auto-height {
 #epcurate-curation #cur-edit .color-list {
     display: none;
     position: absolute;
-    top: 28px;
+    top: 25px;
     left: 0;
     z-index: 60;
     width: 138px;
     height: 50px !important;
-    padding: 4px 2px 0 7px !important;
+    padding: 8px 2px 0 7px !important;
     border: #b2b2b2 1px solid;
-    border-top: none;
     filter: alpha(Opacity=90);
     opacity: 0.9;
-    -moz-border-radius: 0 0 5px 5px;
-    -webkit-border-radius: 0 0 5px 5px;
-    border-radius: 0 0 5px 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 0 5px 5px 5px;
     background: none !important;
     background-color: #d2d2d2 !important;
 }
 
 #epcurate-curation #cur-edit .bg-color .color-list {
-    top: 22px;
+    top: 24px;
 }
 
 #epcurate-curation #cur-edit .color-list li {
@@ -1569,10 +1596,10 @@ p.auto-height {
     display: none;
     position: absolute;
     top: 28px;
-    left: 1px;
+    left: 0;
     z-index: 60;
     float: none;
-    width: 100px;
+    width: 101px;
     border: #b2b2b2 1px solid;
     border-top: none;
     filter: alpha(Opacity=90);
@@ -1583,7 +1610,7 @@ p.auto-height {
 }
 
 #epcurate-curation #cur-edit .duration-container .select .select-list {
-    width: 146px;
+    width: 147px;
 }
 
 #epcurate-curation #cur-edit .select .select-list li {
@@ -1711,7 +1738,7 @@ p.auto-height {
 
 #epcurate-curation #cur-poi .poi-list {
     position: absolute;
-    bottom: 0;
+    top: 90px;
     right: 0;
     width: 550px;
 }
@@ -1751,58 +1778,29 @@ p.auto-height {
 }
 
 #epcurate-curation #cur-poi .poi-list ul {
-    overflow: hidden;
     height: 165px;
+	overflow: hidden;
+	padding: 20px 0 0 0;
+	top: -20px;
 }
 
-#epcurate-curation #cur-poi .poi-list ul li {
-    overflow: hidden;
-    width: 546px;
-    background: url(../images/bg_divider.png) repeat-x bottom;
+#epcurate-curation #cur-poi .poi-list ul li ol {
+	padding: 20px 0 0 0;
 }
 
-#epcurate-curation #cur-poi .poi-list ul li p {
-    float: left;
-    width: 480px;
-    height: 33px;
-    line-height: 33px;
-    margin: 0;
-    padding: 0 4px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-    -ms-text-overflow: ellipsis;
-    -moz-binding: url('ellipsis.xml#ellipsis');
+#epcurate-curation #cur-poi .poi-list ul li .icon span a {
+	width: 487px;
 }
 
-#epcurate-curation #cur-poi .poi-list ul li p.func {
-    float: right;
-    width: auto;
-    padding: 0;
+#epcurate-curation #cur-poi .poi-list ul li .icon:hover .tip-white {
+	top: -55px;
+	left: -26px;
 }
 
-#epcurate-curation #cur-poi .poi-list ul li .edit,
-#epcurate-curation #cur-poi .poi-list ul li .btn-del {
-    float: left;
-    width: 22px;
-    height: 25px;
-    margin: 3px 7px 0 0;
-    background-position: 0 -1060px;
-    text-indent: -100000px;
+#epcurate-curation #cur-poi .poi-list ul li .icon:hover .tip-bottom {
+	margin: -33px 0px 0px -25px;
 }
 
-#epcurate-curation #cur-poi .poi-list ul li .btn-del {
-    background-position: 0 -856px;
-}
-
-#epcurate-curation #cur-poi .poi-list ul li .edit:hover {
-    background-position: -23px -1060px;
-}
-
-#epcurate-curation #cur-poi .poi-list ul li .btn-del:hover {
-    background-position: -23px -856px;
-}
 
 /* Curation poi edit */
 #epcurate-curation #cur-poi-edit {
@@ -2058,7 +2056,6 @@ p.auto-height {
 #epcurate-curation #cur-poi-edit .content .btn-container .btns a {
     height: 31px;
     padding: 0;
-    color: #555;
     font-weight: normal;
     font-family: Arial, Helvetica;
     font-size: 15px;
@@ -2361,7 +2358,7 @@ p.auto-height {
     clear: both;
     background-color: #eee;
     width: 100%;
-    height: 207px;
+    height: 190px;
     bottom: 48px;
 }
 
@@ -2369,12 +2366,12 @@ p.auto-height {
     overflow: hidden;
     height: 18px;
     margin-bottom: 5px;
-    padding-top: 18px;
+    padding-top: 7px;
     padding-left: 17px;
     line-height: 18px;
 }
 
-#storyboard p {
+#storyboard p, #storyboard span {
     margin-bottom: 26px;
     color: #555;
     font-weight: bold;
@@ -2386,6 +2383,18 @@ p.auto-height {
 #storyboard .storyboard-info .episode-name {
     float: left;
     margin: 0 25px 0 0;
+}
+
+#storyboard .storyboard-info .channel-name,
+#storyboard .storyboard-info .episode-name {
+	max-width: 30%;
+	height: 17px;
+	white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    -ms-text-overflow: ellipsis;
+    -moz-binding: url('ellipsis.xml#ellipsis');
 }
 
 #storyboard .storyboard-info p.episode-storyboard span {
@@ -2401,13 +2410,13 @@ p.auto-height {
     margin-right: 0;
 }
 
-#storyboard .storyboard-info .channel-name p,
-#storyboard .storyboard-info .episode-name p {
-    float: left;
+#storyboard .storyboard-info .channel-name span,
+#storyboard .storyboard-info .episode-name span {
     height: 18px;
     line-height: 18px;
-    margin: 0;
+    margin: 0 0 0 0;
     font-style: normal;
+	white-space:nowrap;
 }
 
 #storyboard .storyboard-info .channel-name p.title,
@@ -2444,20 +2453,24 @@ p.auto-height {
 #storyboard .storyboard-list ul {
     position: relative;
     top: 31px;
-    left: 9px;
+    left: 13px;
     width: 5700px;
     min-width: 1024px;
     height: 96px;
-    padding-left: 2px;
-    background: url(../images/icon-frame.png) repeat-x;
+    /*padding-left: 2px;*/
+    background: url(../images/icon_frame.png) repeat-x;
 }
 
 #storyboard .storyboard-list ul li {
     position: relative;
     float: left;
-    width: 94px;
-    height: 96px;
-    margin: 0 20px 0 0;
+	width: 123px;
+    height: 130px;
+    margin: -28px 13px 0 -13px;
+}
+
+#storyboard .storyboard-list ul li:hover, #storyboard .storyboard-list ul li.on {
+    background: url(../images/bg_sub_ep_on.png) no-repeat;
 }
 
 #storyboard .storyboard-list ul li a.warning,
@@ -2465,12 +2478,12 @@ p.auto-height {
 #storyboard .storyboard-list ul li a.error {
     display: block;
     position: absolute;
-    /*top: -5px;
-    left: -5px;*/
+    top: 26px;
     z-index: 40;
     width: 19px;
     height: 18px;
     text-decoration: none;
+	left: 11px;
 }
 
 #storyboard .storyboard-list ul li a.warning,
@@ -2532,6 +2545,7 @@ p.auto-height {
     background-position: 0 -56px;
     line-height: 28px;
     white-space: nowrap;
+	font-weight: normal;
 }
 
 #storyboard .storyboard-list ul li.last2 a.warning2 .tip {
@@ -2605,15 +2619,14 @@ p.auto-height {
 }
 
 #storyboard .storyboard-list ul li p.order {
-    position: absolute;
-    top: -30px;
-    left: 0;
+    position: relative;
     width: 94px;
-    margin: 0;
-    color: #999;
-    font: bold 17px Microsoft JhengHei;
+    margin: 2px auto;
+    font: bold 15px Microsoft JhengHei;
     text-align: center;
     cursor: move;
+	color: #b4b4b4;
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4), 0px 1px 0px rgba(255, 255, 255, 0.4);
 }
 
 #storyboard .storyboard-list ul li p.img {
@@ -2621,7 +2634,7 @@ p.auto-height {
     overflow: hidden;
     width: 94px;
     height: 59px;
-    margin: -1px 0 3px -1px;
+    margin: 4px auto 3px auto;
     background-color: #fff;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3), 0 0 4px rgba(255, 255, 255,0.3) inset;
     cursor: move;
@@ -2672,13 +2685,15 @@ p.auto-height {
 }
 
 #storyboard .storyboard-list ul li h4 {
-    width: 95px;
+    width: 88px;
     height: 36px;
     padding-left: 5px;
     font-weight: normal;
     font-size: 13px;
     line-height: 18px;
     cursor: move;
+	position: relative;
+	margin: 0 auto;
 }
 
 #storyboard .storyboard-list ul li.invalid h4 {
@@ -2686,12 +2701,11 @@ p.auto-height {
 }
 
 #storyboard .storyboard-list ul li p.title {
-    position: absolute;
-    top: 29px;
-    left: -11px;
+    position: relative;
     z-index: 51;
     width: 113px;
     height: 23px;
+	margin: -68px auto 0 auto;
 }
 
 #storyboard .storyboard-list ul li p.title          a,
@@ -2816,9 +2830,8 @@ p.auto-height {
 }
 
 #storyboard .storyboard-list ul li .hover-func {
-    position: absolute;
-    top: 10px;
-    left: 9px;
+    position: relative;
+    margin: -43px auto 0 auto;
     z-index: 52;
     width: 74px;
     height: 45px;
@@ -2974,4 +2987,11 @@ p.auto-height {
 
 body.scrollable {
     overflow-y: auto;
+}
+
+@media all and (min-width: 1358px) {
+#storyboard .storyboard-info .channel-name,
+#storyboard .storyboard-info .episode-name {
+	max-width: 35%;
+}
 }
